# ssmd_backend

./: .gitignore  README.md  auth.py  db.py  main.py  models.py  pyproject.toml  run_prod.sh
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-03.jsonl  omx-2026-04-03.jsonl  session-history.jsonl  turns-2026-04-03.jsonl
.omx/state/: hud-state.json  notify-fallback-state.json  notify-fallback.pid  notify-hook-state.json  session.json  skill-active-state.json  tmux-hook-state.json  update-check.json
.omx/state/sessions/omx-1775228024702-5hhbg8/: AGENTS.md
routes/: announcements.py  attendance.py  health_check.py
routes/auth/: token.py
tests/: conftest.py  test_attendance.py  test_openapi_contract.py
